--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=Works with DS1307, DS3231, PCF8523, PCF8563 on multiple architectures
 category=Timing
 url=https://github.com/adafruit/RTClib
 architectures=*
-depends=Adafruit BusIO
+; depends=Adafruit BusIO
